--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ img{
 }
 @media screen and (max-width: 480px) {
   .gallery {
-    max-width: 300px;
+    max-width: 350px;
     margin: 0 auto;
   }
 }
